[hotfix] Fix compilation with jdk11